style: Fix dialogs on mobile

--- a/src/components/Dialog/Dialog.css
+++ b/src/components/Dialog/Dialog.css
@@ -10,6 +10,8 @@
   align-items: center;
   justify-content: center;
   z-index: 1000;
+  padding: 15px;
+  box-sizing: border-box;
 }
 
 .nes-dialog {
